# validate

./: .gitignore  CHANGELOG.md  LICENSE  README.md  a.out  dune-project  index.html  ppx_derive_validator.opam  validate.opam  validator.opam
.github/workflows/: test.yml
ppx_derive_validate/: dune  exps.ml  field.ml  pats.ml  ppx_derive_validate.ml  simple_type.ml  utils.ml  validators.ml
ppx_derive_validate_test/: abstract.ml  conditional.ml  dune  ppx_derive_validate_test.ml  record.ml  recursive.ml  tuple.ml  variant.ml
ppx_derive_validator/: dune  field.ml  ppx_derive_validator.ml  validators.ml
ppx_derive_validator_test/: dune  ppx_derive_validator_test.ml
validate/: dune  err.ml  helper.ml  index.html  option.ml  regex.ml  validate.ml  value.ml
validate/Ppx_derive_validate/: index.html
validate/Validate/: index.html
validate_test/: custom.ml  dune  err.ml  helper.ml  length.ml  option.ml  regex.ml  validate_test.ml
validator/: custom.ml  dune  err.ml  helper.ml  length.ml  regex.ml  validator.ml  value.ml
validator_test/: custom.ml  dune  err.ml  helper.ml  length.ml  validator_test.ml
